<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="-1dp"
        android:scaleType="fitEnd"
        android:src="@drawable/wave" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/loginTitle"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/darkPurple"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/brightPurple">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/darkPurple"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/brightPurple">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="186dp"
            android:backgroundTint="@color/darkPurple"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:text="@string/loginBtnTxt" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:gravity="center"
            android:text="@string/no_tienes_cuenta"
            android:textSize="16sp" />

        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/registerNow"
            android:textColor="@color/darkPurple"
            android:layout_width="186dp"
            android:layout_height="wrap_content"
            app:strokeColor="@color/darkPurple"
            android:text="@string/registrate" />
    </LinearLayout>


</RelativeLayout>